--- a/.gitignore
+++ b/.gitignore
@@ -16,15 +16,14 @@
 /tmp/*
 !/log/.keep
 !/tmp/.keep
-#/Gemfile.lock
 /public/uploads
 /public/assets
 /public/sitemap.xml.gz
 /config/database.yml
 /db/schema.rb
 .env
-#Gemfile.lock
-#*.sql
+Gemfile.lock
+*.sql
 
 # Ignore Byebug command history file.
 .byebug_history
