--- a/.gitignore
+++ b/.gitignore
@@ -17,14 +17,6 @@
 /tmp/*
 !/log/.keep
 !/tmp/.keep
-/public/uploads
-/public/assets
-/public/sitemap.xml.gz
-/config/database.yml
-/db/schema.rb
-.env
-.project
-.idea
 
 # Ignore pidfiles, but keep the directory.
 /tmp/pids/*
@@ -47,3 +39,14 @@
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+
+# SL add
+/public/uploads
+/public/sitemap.xml.gz
+/db/schema.rb
+/config/letsencrypt.key
+.env
+.project
+.idea
+#Gemfile.lock
+*.sql
