--- a/package.json
+++ b/package.json
@@ -2,10 +2,17 @@
   "name": "sleepinglion",
   "private": true,
   "dependencies": {
+    "@fancyapps/fancybox": "^3.5.7",
     "@rails/actioncable": "^6.0.0",
+    "@rails/actiontext": "^6.1.1",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "bootstrap": "^4.5.3",
+    "jquery": "^3.5.1",
+    "jquery-tagcanvas": "^2.9.0",
+    "jquery.easing": "^1.4.1",
+    "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
