--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@rails/webpacker": "4.3.0",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
+    "jquery-ui-dist": "^1.12.1",
     "jquery-tagcanvas": "^2.9.0",
     "jquery.easing": "^1.4.1",
     "popper.js": "^1.16.1",
